# moonytask

./: .gitignore  README.md  SETUP.md  UPDATES.md  index.html  package-lock.json  package.json
.github/workflows/: build-artifacts.yml
downloads/: latest.json
scripts/: build-android-apk.mjs  build-tauri-artifact.mjs  ci-build-all.mjs  generate-latest-json.mjs  gh-auth-login.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: apps.rs  db.rs  idle.rs  lib.rs  main.rs  master.rs  mobile_updater.rs  timer.rs  tray.rs  updater.rs  watcher.rs
src-tauri/src/sync/: drive.rs  merge.rs  mod.rs  oauth.rs
src/components/: ConfirmModal.tsx  DatePicker.tsx  FolderModal.tsx  Icons.tsx  MobileNav.tsx  MobileProjectList.tsx  Modal.tsx  ProjectModal.tsx  Sidebar.tsx  SuggestModal.tsx  TimerBar.tsx
src/i18n/: en.json  index.ts  it.json
src/lib/: api.ts  colors.ts  platform.ts  theme.tsx  time.ts  types.ts
src/popover/: PopoverApp.tsx
src/views/: ProjectView.tsx  ReportsView.tsx  SettingsView.tsx
