[package]
name = "tinytime"
version = "0.1.0"
description = "TinyTime — project time tracker"
authors = ["miniMAC"]
edition = "2021"

[lib]
name = "tinytime_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
keyring = { version = "3", features = ["apple-native"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
tiny_http = "0.12"
urlencoding = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSWorkspace", "NSRunningApplication"] }
objc2-foundation = { version = "0.2", features = ["NSString"] }
plist = "1"
