[package]
name = "moonytask"
version = "0.1.7"
description = "MoonyTask — project time tracker"
authors = ["miniMAC"]
edition = "2021"

[lib]
name = "moonytask_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
semver = { version = "1", features = ["serde"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
tiny_http = "0.12"
urlencoding = "2"
tauri-plugin-dialog = "2"

# solo desktop: menu bar (tray + rendering timer), posizionamento del popover,
# keychain per i token OAuth (su mobile i token stanno nel db in sandbox)
# e auto-update con dialoghi nativi
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-updater = "2"
fontdue = "0.9"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSWorkspace", "NSRunningApplication"] }
objc2-foundation = { version = "0.2", features = ["NSString"] }
plist = "1"

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["linux-native-sync-persistent"] }
